# tinyblake

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_all.cpp
fuzz/: CMakeLists.txt  fuzz_blake2b.cpp  fuzz_blake2b_key.cpp  fuzz_blake2b_misuse.cpp  fuzz_blake2b_param.cpp  fuzz_cross_backend.cpp  fuzz_hmac.cpp  fuzz_pbkdf2.cpp
include/: tinyblake.h
include/tinyblake/: blake2b.h  common.h  hmac.h  pbkdf2.h  version.h
src/: blake2b.cpp  cpu_features.h  cpuid.cpp  hmac.cpp  pbkdf2.cpp  secure_zero.cpp
src/backend/: blake2b_avx2.cpp  blake2b_avx512.cpp  blake2b_compress.h  blake2b_neon.cpp  blake2b_portable.cpp  blake2b_x64.cpp
src/internal/: endian.h
tests/: CMakeLists.txt  test_blake2b.cpp  test_blake2b_keyed.cpp  test_cpuid.cpp  test_harness.h  test_hmac.cpp  test_params.cpp  test_pbkdf2.cpp  test_truncation.cpp  vectors_blake2b_keyed.inl  vectors_hmac.inl  vectors_pbkdf2.inl  vectors_rfc7693.inl
